# cockpit

./: .gitignore
branding/moximo/: branding.css
pkg/kubernetes/scripts/virtual-machines/: action-types.jsx
pkg/moximo/: .manifest.json.swp  .tool.html.swp  Makefile.am  adjust.js  app.js  client.js  containers.js  dashboard.js  deploy.js  details.js  graphs.js  images.js  index.html  kubernetes.js  manifest.json  moximo.js  node.js  nulecule.js  services.js  test-kubernetes.html  tool.html
pkg/moximo/services/: .moximo.json.swp  moximo-dovecot-rc.json  moximo-fpm-rc.json  moximo-mariadb-rc.json  moximo-nginx-pod.json  moximo-nginx-rc.json  moximo-nginx-service.json  moximo-postfix-rc.json  moximo.json  nginx-pod.json  nginx-pod.yaml  nginx-rc.json  nginx-rc.yaml  nginx-service.json  nginx-service.yaml  start_rc.sh  wp-service.json
pkg/moximo/views/: .dashboard-page.html.swp  dashboard-page.html  moximo-dashboard.html
pkg/ovirt/: index.es6
pkg/shell/: simple.html
